--- a/views/test.ejs
+++ b/views/test.ejs
@@ -20,8 +20,8 @@
         <script src="/socket.io/socket.io.js"></script>
         <script>
 
-                var socket = io('http://localhost:3000',{transports: ['websocket'], upgrade: false});
-
+                var socket = io();
+//                var socket = io('http://localhost:3000',{transports: ['websocket'], upgrade: false});
                 socket.on('connect', function() {
                             console.log(socket.id);
                             document.getElementById('ssid').value = socket.id;
